--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 These scripts require a specifically formatted folder called req-files which includes everything that is needed to run these (besides required packages, such as Java 8.0 and R).
+
+Required tools:
+- GATK 4.9 or higher along with dependencies
+- bwa
